# anytiles

./: README.md  note.ipynb  pyproject.toml  requirements-dev.txt
src/anytiles/: anytiles.py  decorators.py  geometry.py  util.py
