[project]
name = "anytiles"
version = "0.1.0"
description = "Convert raster tiles from any convention to XYZ tiles"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Hodczak", email = "dhodcz2@uic.edu" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/dhodcz2/anytiles"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 42",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["anytiles*"]

